--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "jira-dev-tool": "^1.7.61",
     "prettier": "^2.4.1",
     "qs": "^6.10.1",
     "react": "^17.0.2",
@@ -23,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server __json_server_mock__/db.json --watch --port 3001"
+    "json-server": "json-server ./__json_server_mock__/db.json --watch --port 3001 --middlewares ./__json_server_mock__/middleware.js"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +47,8 @@
   "devDependencies": {
     "@types/qs": "^6.9.7",
     "json-server": "^0.17.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
